# docs/swagger.json
@@ -4,6 +4,138 @@
         "contact": {}
     },
     "paths": {
+        "/news": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "학교 소식 목록을 20개씩 조회합니다",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "News"
+                ],
+                "summary": "학교 소식 목록 조회 [필수 구현] 권한 - 관리자",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "커서",
+                        "name": "cursor",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "학교 목록",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ListNewsResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "학교 소식을 수정 (단 자신의 학교 소식만 수정 가능)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "News"
+                ],
+                "summary": "소식 수정 [필수 구현] 권한 - 관리자",
+                "parameters": [
+                    {
+                        "description": "소식 수정 요청",
+                        "name": "UpdateNewsRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.UpdateNewsRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "학교ID, 제목으로 소식을 생성 (자신의 학교에만 소식을 생성할 수 있음, 학교를 여러개 소유 할 수 있으므로 학교 ID 필요)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "News"
+                ],
+                "summary": "소식 생성 [필수 구현] 권한 - 관리자",
+                "parameters": [
+                    {
+                        "description": "소식 생성 요청",
+                        "name": "CreateNewsRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.CreateNewsRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/news/{newsID}": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "소식 ID로 상품을 삭제합니다. (단 자신의 학교 소식만 삭제 가능)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "News"
+                ],
+                "summary": "소식 삭제 [필수 구현] 권한 - 관리자",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "소식 ID",
+                        "name": "newsID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
         "/schools": {
             "get": {
                 "security": [
@@ -11,14 +143,14 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "학교 목록을 조회합니다 (권한: 관리자, 학생) userID를 쿼리스트링에 입력시 해당 유저의 학교 목록을 조회합니다. 디폴트 20개씩 조회",
+                "description": "학교 목록을 조회합니다  userID를 쿼리스트링에 입력시 해당 유저의 학교 목록을 조회합니다. 디폴트 20개씩 조회",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Schools"
                 ],
-                "summary": "학교 목록 조회 [테스트 추가 API]",
+                "summary": "학교 목록 조회 [테스트 추가 API] 권한 - 관리자, 학생",
                 "parameters": [
                     {
                         "type": "integer",
@@ -58,7 +190,7 @@
                 "tags": [
                     "Schools"
                 ],
-                "summary": "학교 생성 [필수 구현]",
+                "summary": "학교 생성 [필수 구현] 권한 - 관리자",
                 "parameters": [
                     {
                         "description": "학교 생성 요청",
@@ -144,6 +276,17 @@
         }
     },
     "definitions": {
+        "domain.CreateNewsRequest": {
+            "type": "object",
+            "properties": {
+                "schoolID": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.CreateSchoolRequest": {
             "type": "object",
             "required": [
@@ -184,6 +327,20 @@
                         }
                     ],
                     "example": "ADMIN"
+                }
+            }
+        },
+        "domain.ListNewsResponse": {
+            "type": "object",
+            "properties": {
+                "cursor": {
+                    "type": "integer"
+                },
+                "news": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.NewsDTO"
+                    }
                 }
             }
         },
@@ -235,6 +392,34 @@
                 }
             }
         },
+        "domain.NewsDTO": {
+            "type": "object",
+            "required": [
+                "createDate",
+                "id",
+                "updateDate"
+            ],
+            "properties": {
+                "createDate": {
+                    "type": "string",
+                    "example": "2024-02-28T15:04:05Z"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "schoolID": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updateDate": {
+                    "type": "string",
+                    "example": "2024-02-28T15:04:05Z"
+                }
+            }
+        },
         "domain.SchoolDTO": {
             "type": "object",
             "properties": {
@@ -245,6 +430,17 @@
                     "type": "string"
                 },
                 "region": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.UpdateNewsRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "title": {
                     "type": "string"
                 }
             }
